--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </h1>
         </div>
         <nav class="navigation">
-          <ul class="lists">
+          <ul id="nav-items" class="lists nav-items">
             <li class="list-item">Gallery</li>
             <li class="list-item">Packages</li>
             <li class="list-item">Blog</li>
